--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,12 @@ body {
     margin:0;   
     background:#fafafa; 
     font-family: "Smythe", system-ui;;
-    color: #FFFFFF
 }
 
 header {
     height: 167px;
     background-image: url('./assets/images/bg-img.png');
+    color: #FFFFFF;
 }
 
 header h1 {
@@ -28,17 +28,19 @@ header h1, header p {
 
 .container {
     width: 600px;
-    height: 1161px;
+    height: auto;
     background-color: #FFFFFF;
     margin:0 auto
 }
 
 .item-container {
     display: flex;
-    
+    border-bottom: 1px solid #D2D2D2;
+}
+
+.item-container, .checked-out, .total {
     width: 508px;
     height: 140px;
-    border-bottom: 1px solid #D2D2D2;
     margin-top: 34px;
     margin-left: 46px;
     padding: 0
@@ -79,6 +81,7 @@ header h1, header p {
 .add-btn {
     margin-left: auto;
     text-align: center;
+    cursor: pointer;
     margin-top: 15px;
     width: 50px;
     height: 50px;
@@ -91,6 +94,48 @@ header h1, header p {
     border-radius: 50%;
 }
 
+/* checkout section */
+
+.checkout {
+    display: none;
+}
+
+.checkout h2 {
+    text-align: center;
+}
+
+.remove-btn {
+    border: none;
+    background-color: transparent;
+}
+
+.checked-out {
+    height: auto;
+    border-bottom: 1px solid #3C3C3C;
+
+}
+
+.checked-out div, .total {
+    display: flex;
+    justify-content: space-between;
+}
+
+.checked-out div p {
+    font-size: 28px;
+    margin-top: 0;
+}
+
+span {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    color: #BBBBBB;
+    margin-left: 10px;
+}
+
+.total {
+    font-size: 28px;
+}
 
 
 
