--- a/src/style.css
+++ b/src/style.css
@@ -28,9 +28,13 @@ header h1, header p {
 
 .container {
     width: 600px;
-    height: auto;
+    height: 994px;
     background-color: #FFFFFF;
     margin:0 auto
+}
+
+.food-menu {
+    margin-bottom: 20px;
 }
 
 .item-container {
@@ -38,7 +42,7 @@ header h1, header p {
     border-bottom: 1px solid #D2D2D2;
 }
 
-.item-container, .checked-out, .total {
+.item-container, .checked-out, .btn-container {
     width: 508px;
     height: 140px;
     margin-top: 34px;
@@ -100,7 +104,7 @@ header h1, header p {
     display: none;
 }
 
-.checkout h2 {
+.checkout h2, .btn-container {
     text-align: center;
 }
 
@@ -111,7 +115,7 @@ header h1, header p {
 
 .checked-out {
     height: auto;
-    border-bottom: 1px solid #3C3C3C;
+    border-bottom: 2px solid #393333;
 
 }
 
@@ -134,8 +138,85 @@ span {
 }
 
 .total {
+    width: 508px;
+    margin-left: 46px;
     font-size: 28px;
 }
+
+button {
+    width: 508px;
+    height: 60px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #FFFFFF;
+    background-color: #16DB99;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.card-details-modal {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    width: 524px;
+    height: 524px; 
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.card-details-modal.is-open { display: flex;}
+.modal-overlay { 
+    position: fixed; 
+    inset: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 999;
+}
+
+.modal-overlay.is-open {
+    display: block;
+}
+
+.card-details-modal h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    margin: 40px;
+    
+}
+
+input {
+    width: 475px;
+    height: 71px;
+    border: 1.3px solid #757575;
+    border-radius: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    padding-left: 20px;
+    margin-bottom: 30px;
+}
+
+.thank-you-msg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0 40px 46px;
+    width: 504px;
+    height: 120px;
+    background-color: #ECFDF5;
+    font-size: 32px;
+    color: #065F46;
+    
+}
+
 
 
 
